packages/theme-default/src/styles/base.css
@import url(./preflight.css);
@tailwind components;
@tailwind utilities;


*,
::before,
::after {
  box-sizing: border-box;
}

html {
  line-height: 1.7;
  font-size: 16px;
  -webkit-text-size-adjust: 100%;
  scroll-padding-top: var(--rp-nav-height);
}

html.dark {
  color-scheme: dark;
}

body {
  margin: 0;
  width: 100%;
  min-width: 320px;
  font-family: var(--rp-font-family-base);
  font-size: 16px;
  font-weight: 400;
  color: var(--rp-c-text-1);
  background-color: var(--rp-c-bg);
  direction: ltr;
  font-synthesis: style;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

button:focus,
button:focus-visible {
  outline: none;
}

.visually-hidden {
  visibility: hidden;
}

.flex-center {
  @apply flex items-center justify-center;
}

.menu {
  @apply flex justify-around items-center text-sm font-bold;
}

.rspress-logo {
  height: 1.6rem;
}

#nprogress .bar {
  background: var(--rp-c-brand);
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 2px;
}

:root {
  --code-color-text: #414141;
  --code-color-background: transparent;
  --code-token-constant: #f59403;
  --code-token-string: #31a94d;
  --code-token-comment: rgb(182, 180, 180);
  --code-token-keyword: #cf2727;
  --code-token-parameter: #1976d2;
  --code-token-function: #7041c8;
  --code-token-string-expression: #218438;
  --code-token-punctuation: #242323;
  --code-token-link: #22863a;
  --code-token-variable: #1976d2;
  --code-token-symbol: #f59403;
  --code-token-deleted: #d32828;
  --code-token-inserted: #22863a;
}

.dark {
  --code-color-text: #cac7c7;
  --code-token-constant: #6fb0fa;
  --code-token-string: #f9a86e;
  --code-token-comment: #6a727b;
  --code-token-keyword: #f47481;
  --code-token-parameter: #ff9800;
  --code-token-function: #ae8eeb;
  --code-token-string-expression: #4fb74d;
  --code-token-punctuation: #bbbbbb;
  --code-token-link: #f9a76d;
  --code-token-variable: #6fb0fa;
  --code-token-symbol: #f9a86e;
  --code-token-deleted: #ee6d7a;
  --code-token-inserted: #36c47f;
}

/**
  * Custom font family
*/
:root {
  --rp-font-family-base: 'Inter var experimental', 'Inter var', -apple-system,
    BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  --rp-font-family-mono: Menlo, Monaco, Consolas, 'Courier New', monospace;
}

